center align issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -243,6 +243,9 @@ header {
     display: block;
     max-width: 650px;
     margin: 0 auto;
+    .img-responsive {
+        margin: 0 auto;
+    }
     .portfolio-box-caption {
         color: white;
         opacity: 0;
